// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomTransactionLink with deposit matches the snapshot 1`] = `
<button
  color="#708F63"
  type="text"
  class="css-1p8w3ca"
>
  ?
</button>
`;

exports[`CreateCustomTransactionLink with dispense matches the snapshot 1`] = `
<button
  color="#B67138"
  type="text"
  class="css-nyzi8n"
>
  ?
</button>
`;
